# wire_weaver

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  TODO.md  check.sh  index.html  justfile  mkdocs.yml  pyproject.toml  typos.toml
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs  util.rs
cli/src/handlers/: dev.rs  generate.rs  mod.rs  repl.rs  repl_xpi.rs
codegen/: Cargo.toml
codegen/src/: ast_wrappers.rs  dependencies.rs  error.rs  file.rs  lib.rs
codegen/src/dart/: docs.rs  identifier.rs  item_enum.rs  mod.rs
codegen/src/multilang/: docs.rs
codegen/src/rust/: ast_wrappers.rs  docs.rs  identifier.rs  item_enum.rs  item_tuple.rs  mod.rs  path.rs  struct_def.rs  ty.rs
crates/wire_weaver/: Cargo.toml  build.rs
crates/wire_weaver/src/: client_server.rs  client_server_no_alloc.rs  lib.rs
crates/wire_weaver/ww/: client_server.ww
examples_mcu/: Cargo.toml  README.md  rust-toolchain.toml
examples_mcu/mcu_qemu/: Cargo.toml  rust-toolchain.toml
examples_mcu/mcu_qemu/.cargo/: config.toml
examples_mcu/usb_nucleo_h743zi2/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
examples_mcu/usb_nucleo_h743zi2/.cargo/: config.toml
examples_mcu/usb_stm32g0b1cetxn/: Cargo.toml  README.md  memory.x
examples_mcu/usb_stm32g0b1cetxn/.cargo/: config.toml
examples_mcu/usb_stm32h725ig/: Cargo.toml  README.md  memory.x
examples_mcu/usb_stm32h725ig/.cargo/: config.toml
mquote/: Cargo.toml  README.md
mquote/src/: lexer.rs  lib.rs  mquote.pest
shrink_wrap/: CHANGELOG.md  Cargo.toml  README.md
shrink_wrap/shrink_wrap/: Cargo.toml
shrink_wrap/shrink_wrap/examples/: simple_derive.rs
shrink_wrap/shrink_wrap/src/: alloc.rs  buf_reader.rs  buf_writer.rs  lib.rs  nib.rs  nib32.rs  raw_slice.rs  ref_box.rs  stack_vec.rs  traits.rs  un.rs
shrink_wrap/shrink_wrap/tests/: basic_types.rs  box_ref_box.rs  stack_vec.rs
shrink_wrap/shrink_wrap_core/: Cargo.toml  README.md
shrink_wrap/shrink_wrap_core/src/: lib.rs
shrink_wrap/shrink_wrap_derive/: Cargo.toml  README.md
shrink_wrap/shrink_wrap_derive/src/: lib.rs  shrink_wrap.rs  ww_repr.rs
shrink_wrap/src/: alloc.rs  buf_reader.rs  buf_writer.rs  lib.rs  nib.rs  nib16.rs  nib32.rs  ref_box.rs  ref_vec.rs  stack_vec.rs  traits.rs  un.rs  vec.rs
tests/: Cargo.toml  README.md  array_of_streams.rs  basic_types.rs  common.rs  methods.rs  mquote.rs  properties.rs  serdes.rs  shrink_wrap.rs  shrink_wrap_derive.rs  stack_vec.rs  streams.rs  traits.rs  wireformat_compatibility.rs
tests/array_of_streams/: Cargo.toml
tests/array_of_streams/src/: lib.rs
tests/array_of_streams_api/: Cargo.toml
tests/array_of_streams_api/src/: lib.rs
tests/input/: array_dispatch_kinds.vhl  resource_arrays.vhl  resource_types.vhl  xpi_simple.vhl
tests/methods/: Cargo.toml
tests/methods/src/: lib.rs
tests/methods_api/: Cargo.toml
tests/methods_api/src/: lib.rs
tests/properties/: Cargo.toml
tests/properties/src/: lib.rs
tests/properties_api/: Cargo.toml
tests/properties_api/src/: lib.rs
tests/streams/: Cargo.toml
tests/streams/src/: lib.rs
tests/streams_api/: Cargo.toml
tests/streams_api/src/: lib.rs
tests/tests_common/: Cargo.toml
tests/traits/: Cargo.toml
tests/traits_api/: Cargo.toml
tests/usb_link/: Cargo.toml
tests/ww/: blinker_v0.ww  blinker_v1.ww  blinker_v2.ww  data_enum.ww  enum_repr.ww  enum_repr_invalid.ww  enum_repr_out_of_discriminants.ww  option_explicit_flag.ww  result.ww  result_explicit_flag.ww  simple_struct.ww
vhl-core/: Cargo.toml
vhl-core/src/: error.rs  project.rs  transform.rs  user_error.rs
wire_weaver/: CHANGELOG.md  Cargo.toml  README.md
wire_weaver/src/: date_time.rs  lib.rs  test.rs  valid_indices.rs  version.rs
wire_weaver_cli/: Cargo.toml
wire_weaver_cli/src/: cli.rs  main.rs  util.rs
wire_weaver_client_common/: CHANGELOG.md  Cargo.toml  README.md
wire_weaver_client_common/src/: attachment.rs  command.rs  command_sender.rs  device_filter.rs  event_loop_state.rs  introspect.rs  lib.rs  prepared_call.rs  prepared_read.rs  prepared_write.rs  promise.rs  rx_dispatcher.rs  sink.rs  stream.rs  timeout.rs  tracing.rs  util.rs  ww.rs
wire_weaver_client_server/: Cargo.toml
wire_weaver_client_server/src/: event_loop_state.rs  lib.rs  util.rs  ww.rs
wire_weaver_core/: CHANGELOG.md  Cargo.toml  README.md
wire_weaver_core/grammar/: method_model.pest  property_model.pest
wire_weaver_core/src/: ast.rs  eval.rs  lib.rs  local_registry.rs  method_model.rs  property_model.rs
wire_weaver_derive/: CHANGELOG.md  Cargo.toml  README.md
wire_weaver_derive/src/: api.rs  lib.rs  shrink_wrap.rs  util.rs  version.rs  ww_api.rs  ww_impl.rs  ww_impl_args.rs  ww_repr.rs  ww_trait.rs
wire_weaver_net_host/: Cargo.toml
wire_weaver_net_host/src/: event_loop_udp.rs  event_loop_ws.rs  lib.rs
wire_weaver_tool/: Cargo.toml  index.html
wire_weaver_tool/assets/: sw.js
wire_weaver_tool/src/: app.rs  debug_view.rs  lib.rs  main.rs  tab.rs  tab_kind.rs  tiles_demo.rs  util.rs
wire_weaver_udp_link/: Cargo.toml
wire_weaver_udp_link/src/: lib.rs
wire_weaver_usb/: Cargo.toml
wire_weaver_usb/src/: connection.rs  event_loop.rs  lib.rs  ww.rs  ww_nusb.rs
wire_weaver_usb_embassy/: Cargo.toml  README.md
wire_weaver_usb_embassy/src/: event_loop.rs  init.rs  lib.rs
wire_weaver_usb_host/: Cargo.toml  README.md
wire_weaver_usb_host/src/: connection.rs  event_loop.rs  lib.rs  loopback.rs  tracing.rs  util.rs  ww.rs  ww_nusb.rs
wire_weaver_usb_link/: CHANGELOG.md  Cargo.toml  README.md
wire_weaver_usb_link/fuzz/: Cargo.toml
wire_weaver_usb_link/src/: common.rs  lib.rs  receiver.rs  sender.rs  tests.rs
ww_can_bus/: Cargo.toml
ww_can_bus/src/: lib.rs
ww_client_server/: Cargo.toml  README.md
ww_client_server/src/: lib.rs  util.rs
ww_date_time/: Cargo.toml
ww_date_time/src/: lib.rs
ww_dfu/: Cargo.toml
ww_numeric/: Cargo.toml
ww_numeric/src/: lib.rs
ww_self/: Cargo.toml
ww_self/src/: lib.rs
ww_si/: Cargo.toml
ww_si/src/: lib.rs
ww_version/: Cargo.toml
ww_version/src/: lib.rs
(+794 files in other folders)
