[workspace.package]
version = "0.4.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
description = "WireWeaver is a wire format and API code generator for resource constrained systems."
edition = "2024"

[workspace.dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
defmt = "1.0"
strum_macros = "0.27"
shrink_wrap = { path = "../shrink_wrap/shrink_wrap", default-features = false }

[workspace]
resolver = "2"
members = [
    "wire_weaver",
    "wire_weaver_core",
    "wire_weaver_derive",
    "wire_weaver_usb_host",
    # "wire_weaver_usb_embassy", no_std crate, excluded to be able to run cargo test
    "wire_weaver_usb_link",
    "wire_weaver_net_host",
    "wire_weaver_client_common",
    "wire_weaver_udp_link",
    #    "wire_weaver_tool",
    "examples/*",
    "tests",
    "ww_client_server",
    "../ww_stdlib/ww_date_time",
    "ww_self",
    "../ww_stdlib/ww_si",
    "../ww_stdlib/ww_log_bare_metal",
    "ww_global",
    "wire_weaver_cli",
]
