[package]
name = "cli"
version = "0.2.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0.63"
clap = { version = "^3.2.19", features = ["derive"] }
subprocess = "^0.2.9"
pathsearch = "0.2.0"
vhl = { path = ".." }
parser = { path = "../parser" }
codegen = { path = "../codegen" }
rustyline = "^10.0.0"
rustyline-derive = "^0.7.0"

[features]
backtrace = ["parser/backtrace"]