[package]
name = "cli"
version = "0.2.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
subprocess = "^0.2.9"
pathsearch = "0.2.0"
vhl = { path = ".." }
ast = { path = "../ast" }
parser = { path = "../parser" }
codegen = { path = "../codegen" }
rustyline = "^10.0.0"
rustyline-derive = "^0.7.0"
util = { path = "../util" }

[features]
backtrace = ["parser/backtrace"]