[package]
name = "cli"
version = "0.2.0"
authors.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
subprocess = "^0.2.9"
pathsearch = "0.2.0"
vhl-core = { path = "../vhl-core" }
ast = { path = "../ast" }
parser = { path = "../parser" }
codegen = { path = "../codegen" }
rustyline = "^10.0.0"
rustyline-derive = "^0.7.0"
util = { path = "../util" }

[features]
backtrace = ["parser/backtrace"]