[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "^1.0.33"
#vhl = { path = "../" }
ast = { path = "../ast" }
#quote = "1.0"
#proc-macro2 = "1.0"
mtoken = { path = "../mtoken" }
mquote = { path = "../mquote" }
vhl-stdlib = { path = "../vhl-stdlib/vhl-stdlib-rust" }
semver = { version = "^1.0.13", default-features = false }
#rustfmt-nightly = { path = "../../rustfmt/" }
itertools = "0.10"