[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "^1.0.33"
vhl-core = { path = "../vhl-core" }
ast = { path = "../ast" }
parser = { path = "../parser" }
#quote = "1.0"
#proc-macro2 = "1.0"
mtoken = { path = "../mtoken" }
mquote = { path = "../mquote" }
vhl-stdlib = { path = "../vhl-stdlib-rust/vhl-stdlib" }
semver = { version = "^1.0.13", default-features = false }
#rustfmt-nightly = { path = "../../rustfmt/" }
itertools = { workspace = true }