[workspace]
resolver = "3"

members = [
    "usb_nucleo_h743zi2",
    "mcu_qemu",
]

[workspace.dependencies]
wire_weaver_usb_embassy = { path = "../mcu/wire_weaver_usb_embassy" }
wire_weaver_usb_link = { path = "../wire_weaver_usb_link", features = ["device", "defmt"] }
wire_weaver = { path = "../wire_weaver", default-features = false, features = ["defmt"] }
ww_client_server = { path = "../ww_stdlib/ww_client_server", default-features = false }
ww_gpio = { path = "../ww_stdlib/ww_gpio", default-features = false }

# see for more info: https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2 # full debug info
debug-assertions = true
incremental = false
opt-level = 3
#opt-level = "s"
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
#opt-level = "s"
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z" # 3 - speed, s - size, z - even less size
#opt-level = "s"
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
#opt-level = "s"
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
