[package]
name = "mquote"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
parser-test = "0.3"

#[patch.crates-io]
#parser-test = { path = "../../parser-test" }