[package]
name = "shrink_wrap"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
defmt = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
paste = "1"

[features]
default = ["std"]
std = []

defmt = ["dep:defmt"]
defmt-extended = []

tracing-extended = ["dep:tracing", "std"]