[package]
name = "tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dev-dependencies]
wire_weaver.workspace = true
wire_weaver_client_common.workspace = true
ww_client_server.workspace = true
tokio = { version = "1", features = ["sync", "rt-multi-thread", "rt", "macros", "test-util"] }
hex-literal = "1"
tracing-subscriber = "0.3"

[features]
default = ["std"]
std = []

[[test]]
name = "methods"
path = "methods.rs"

[[test]]
name = "properties"
path = "properties.rs"

[[test]]
name = "streams"
path = "streams.rs"

[[test]]
name = "array_of_streams"
path = "array_of_streams.rs"

[[test]]
name = "traits"
path = "traits.rs"