[package]
name = "wire_weaver"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
shrink_wrap = { path = "../shrink_wrap", default-features = false }
wire_weaver_derive = { path = "../wire_weaver_derive" }
defmt = { version = "1.0", optional = true }
chrono = { version = "0.4", default-features = false, optional = true }
semver = { version = "1", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[features]
default = ["std", "chrono", "semver"]
std = ["shrink_wrap/std"]
defmt = ["dep:defmt", "shrink_wrap/defmt"]
chrono = ["dep:chrono"]
semver = ["dep:semver"]

defmt-extended = ["dep:defmt", "shrink_wrap/defmt-extended"]
tracing-extended = ["dep:tracing", "shrink_wrap/tracing-extended"]

[build-dependencies]
wire_weaver_core = { path = "../wire_weaver_core" }
pathsearch = "0.2.0"
subprocess = "0.2.9"

[dev-dependencies]
hex-literal = "1"