[package]
name = "wire_weaver"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
shrink_wrap.workspace = true
wire_weaver_derive = { path = "../wire_weaver_derive" }
defmt = { version = "1.0", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }
ww_version = { path = "../../ww_stdlib/ww_version", default-features = false }

[features]
default = ["std"]
std = ["shrink_wrap/std", "ww_version/std"]
defmt = ["dep:defmt", "shrink_wrap/defmt", "ww_version/defmt"]

defmt-extended = ["dep:defmt", "shrink_wrap/defmt-extended"]
tracing-extended = ["dep:tracing", "shrink_wrap/tracing-extended"]