[package]
name = "ww"
version = "0.1.0"
authors.workspace = true
description = "WireWeaver command line tool"
edition.workspace = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
shrink_wrap_core.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
anyhow = "1.0"
indicatif = "0.18"
console = "0.16"
human-repr = "1.1"

wire_weaver_core = { path = "../wire_weaver_core" }
wire_weaver_usb_host = { path = "../wire_weaver_usb_host" }