[package]
name = "wire_weaver_client_common"
version.workspace = true
authors.workspace = true
description = "Client-server API model host side common data types (USB, WebSocket, UDP event loop state) and helper functions"
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2.0"
tracing = "0.1"
wire_weaver = { path = "../wire_weaver" }
ww_client_server = { path = "../ww_client_server" }
ww_version = { path = "../ww_version", features = ["std"] }

[features]
default = ["default-timeout-250ms"]
default-timeout-100ms = []
default-timeout-250ms = []
default-timeout-1s = []