[package]
name = "wire_weaver_client_common"
version = "0.1.0"
authors.workspace = true
description = "Client-server API model host side common data types (USB, WebSocket, UDP event loop state) and helper functions"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
thiserror = "2.0"
tracing = "0.1"
wire_weaver = { version = "0.4.0", path = "../wire_weaver" }
ww_client_server = { workspace = true, features = ["std"] }
ww_version = { workspace = true, features = ["std"] }
ww_self = { workspace = true, features = ["std"] }
nusb = { version = "0.2", optional = true }

[features]
nusb = ["dep:nusb"]