[package]
name = "wire_weaver_client_server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
thiserror = "2.0"
tracing = "0.1"
wire_weaver = { path = "../wire_weaver" }

[features]
default = ["default-timeout-250ms"]
default-timeout-100ms = []
default-timeout-250ms = []
default-timeout-1s = []