[package]
name = "wire_weaver_core"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
#strum = "0.26"
#strum_macros = "0.26"
shrink_wrap.workspace = true
shrink_wrap_core.workspace = true
convert_case = "0.10"
pest = "2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
regex = "1.11"
anyhow = "1"
ww_self.workspace = true

[features]
default = ["std"]
std = ["shrink_wrap/std"]