[package]
name = "wire_weaver_core"
edition = "2024"
version.workspace = true
authors.workspace = true
description = "Core types, AST and codegen of wire_weaver - API code generator for microcontrollers"
repository.workspace = true
license.workspace = true
documentation = "https://vhrdtech.github.io/wire_weaver"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
#strum = "0.26"
#strum_macros = "0.26"
shrink_wrap.workspace = true
shrink_wrap_core.workspace = true
convert_case = "0.10"
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
regex = "1.12"
anyhow = "1"
ww_self.workspace = true
relative-path = "2.0"
console = "0.16"

[features]
default = ["std"]
std = ["shrink_wrap/std"]