[package]
name = "wire_weaver_derive"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
wire_weaver_core = { path = "../wire_weaver_core" }
darling = "0.20"
pathsearch = "0.2.0"
subprocess = "0.2.9"
relative-path = "1.9"