[package]
name = "wire_weaver_derive"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
wire_weaver_core = { path = "../wire_weaver_core" }
darling = "0.23"
pathsearch = "0.2"
subprocess = "0.2"
relative-path = "2.0"
convert_case = "0.10"
