[package]
name = "wire_weaver_derive"
edition = "2024"
version.workspace = true
authors.workspace = true
description = "Derive macros of wire_weaver - API code generator for microcontrollers"
repository.workspace = true
license.workspace = true
documentation = "https://vhrdtech.github.io/wire_weaver"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
wire_weaver_core = { version = "0.4.0", path = "../wire_weaver_core" }
darling = "0.23"
pathsearch = "0.2"
subprocess = "0.2"
relative-path = "2.0"
convert_case = "0.11"
