[package]
name = "wire_weaver_net_host"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
wire_weaver_client_server = { path = "../wire_weaver_client_server" }
tokio = { version = "1", features = ["sync", "net", "macros", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
thiserror = "2.0"
tracing = "0.1"
shrink_wrap = { path = "../shrink_wrap" }
