[package]
name = "wire_weaver_udp_link"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
strum_macros = { workspace = true }
defmt = { workspace = true, optional = true }
wire_weaver = { path = "../wire_weaver" }
ww_version.workspace = true
