[package]
name = "wire_weaver_usb_embassy"
version = "0.4.0"
edition = "2024"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
description = "WireWeaver client server protocol on top of USB (device side, embassy on microcontrollers)"

[dependencies]
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-futures = "0.1"
embassy-time = "0.5"
defmt = "1.0"
wire_weaver = { path = "../wire_weaver", default-features = false }
wire_weaver_usb_link = { path = "../wire_weaver_usb_link", features = ["device", "defmt"] }