[package]
name = "wire_weaver_usb_link"
version = "0.1.0"
edition = "2024"
authors = ["Roman Isaikin <roman@vhrd.tech>"]
description = "WireWeaver over USB implementation"

[dependencies]
crc = "3"
strum_macros = "0.26"
wire_weaver_derive = { path = "../wire_weaver_derive" }
shrink_wrap = { path = "../shrink_wrap", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
host = []
device = []

[dev-dependencies]
worst-executor = "0.1.1"
