[package]
name = "wire_weaver_usb_link"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Transport layer on top of USB packets, allowing multiple messages per packet"

[dependencies]
crc = "3"
strum_macros = { workspace = true }
defmt = { workspace = true, optional = true }
wire_weaver = { path = "../wire_weaver" }
shrink_wrap = { path = "../shrink_wrap", default-features = false }

[features]
host = []
device = []

[dev-dependencies]
worst-executor = "0.1.1"
