[package]
name = "wire_weaver_usb_link"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Transport layer on top of USB packets, allowing multiple messages per packet"

[dependencies]
crc = "3.3.0"
strum_macros = { workspace = true }
defmt = { workspace = true, optional = true }
wire_weaver = { path = "../wire_weaver", default-features = false }
shrink_wrap.workspace = true
ww_global = { path = "../ww_global" }

[features]
host = ["wire_weaver/std"]
device = []

[dev-dependencies]
worst-executor = { version = "0.1.1", git = "https://github.com/romixlab/worst-executor.git" }
tokio = { version = "1.48", features = ["sync"] }
