[package]
name = "ww_client_server"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
ww_version = { path = "../ww_version", default-features = false }

[features]
default = ["std"]
std = ["wire_weaver/std", "ww_version/std"]