[package]
name = "ww_client_server"
version = "0.1.0"
authors.workspace = true
description = "Client-server API model data types for both no_std and std."
edition.workspace = true

[dependencies]
shrink_wrap.workspace = true
wire_weaver_derive = { path = "../wire_weaver_derive" }
ww_version = { path = "../ww_version", default-features = false }

[features]
default = ["std"]
std = ["shrink_wrap/std", "ww_version/std"]