[package]
name = "ww_date_time"
version = "0.1.0" # tracked separately for each data type
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
chrono = { version = "0.4", default-features = false, optional = true }
defmt = { version = "1.0", optional = true }

[features]
default = ["std", "chrono"]
std = ["wire_weaver/std"]
defmt = ["dep:defmt", "wire_weaver/defmt"]
chrono = ["dep:chrono"]

[dev-dependencies]
hex-literal = "1"