[package]
name = "ww_dfu"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["wire_weaver/std"]
defmt = ["dep:defmt", "wire_weaver/defmt"]
