[package]
name = "ww_numeric"
version = "0.1.0"
authors.workspace = true
description = "Various numeric types, subtypes, shift-scale"
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["wire_weaver/std"]
defmt = ["dep:defmt", "wire_weaver/defmt"]
