[package]
name = "ww_self"
version = "0.1.0"
authors.workspace = true
description = "WireWeaver of WireWeaver itself for dynamic access to APIs, expression eval and introspection"
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
ww_numeric = { path = "../ww_numeric", default-features = false }
ww_version = { path = "../ww_version", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["wire_weaver/std", "ww_numeric/std"]
defmt = ["dep:defmt", "wire_weaver/defmt", "ww_numeric/defmt"]
