[package]
name = "ww_si"
version = "0.1.0"
authors.workspace = true
description = "Statically and dynamically typed SI values"
edition.workspace = true

[dependencies]
wire_weaver = { path = "../wire_weaver", default-features = false }
ww_numeric = { path = "../ww_numeric", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["wire_weaver/std", "ww_numeric/std"]
defmt = ["dep:defmt", "wire_weaver/defmt", "ww_numeric/defmt"]
