[package]
name = "ww_version"
version = "0.1.0" # tracked separately for each data type
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
shrink_wrap = { path = "../shrink_wrap", default-features = false }
wire_weaver_derive = { path = "../wire_weaver_derive" }
semver = { version = "1", default-features = false, optional = true }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["shrink_wrap/std", "semver/std"]
defmt = ["dep:defmt", "shrink_wrap/defmt"]
semver = ["dep:semver"]

[dev-dependencies]
hex-literal = "1"