[package]
name = "wire_weaver"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
shrink_wrap = { path = "../shrink_wrap", default-features = false }
wire_weaver_derive = { path = "../wire_weaver_derive" }

[features]
default = ["std"]
std = ["shrink_wrap/std"]
defmt = ["shrink_wrap/defmt"]
defmt-extended = ["shrink_wrap/defmt-extended"]
tracing-extended = ["shrink_wrap/tracing-extended"]

[build-dependencies]
wire_weaver_core = { path = "../wire_weaver_core" }
pathsearch = "0.2.0"
subprocess = "0.2.9"